# SAN-BOT

./: .flake8  README.md  requirements.txt  setup.cfg
.github/workflows/: ci_lint.yml  ci_verification.yml
src/: bot.py  constants.py  run_bot.py  site_crawler.py  timetable.py  utils.py
src/bot/: bot.py  run_bot.py  timetable.py  utils.py
src/sanbot/: bot.py  run_bot.py  timetable.py
src/tests/: test_timetable.py  test_utils.py
tests/: test_bot.py  test_run_bot.py  test_timetable.py  test_utils.py
