[metadata]
name = SAN-BOT
description = Discord chat bot written in python for students of Społeczna Akademia Nauk
author = Arkadiusz Olczak
platform = unix, linux, osx, win32, cygwin
url = https://github.com/arkolcz/SAN-BOT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    aiohttp==3.7.4.post0
    async-timeout==3.0.1
    attrs==21.2.0
    black==21.9b0
    chardet==4.0.0
    click==8.0.3
    discord==1.7.3
    discord.py==1.7.3
    flake8==4.0.1
    html5lib==1.1
    idna==3.3
    iniconfig==1.1.1
    mccabe==0.6.1
    mechanize==0.4.7
    mock==4.0.3
    multidict==5.2.0
    mypy==0.910
    mypy-extensions==0.4.3
    packaging==21.3
    pathspec==0.9.0
    platformdirs==2.4.0
    pluggy==1.0.0
    py==1.11.0
    pycodestyle==2.8.0
    pyflakes==2.4.0
    pyparsing==3.0.6
    pytest==6.2.5
    pytest-dotenv==0.5.2
    python-dotenv==0.19.1
    regex==2021.10.23
    six==1.16.0
    toml==0.10.2
    tomli==1.2.1
    typing-extensions==3.10.0.2
    webencodings==0.5.1
    yarl==1.7.0

packages =
    sanbot
package_dir =
    =src
python_requires = >=3.8
zip_safe = no